--- a/setup/README
+++ b/setup/README
@@ -1,1 +1,13 @@
-Copy nsProcess/nsProcess.dll to %NSIS%/Plugins directory.
+#### NSIS 3
+
+- Copy `nsProcess` contents to the `NSIS 3` root directory.
+
+#### NSIS 2 (ANSI)
+
+- Copy `nsProcess\Include\nsProcess.nsh` to the `Include` folder (located at `NSIS 2` root directory).
+- Copy `nsProcess\Plugins\x86-ansi\nsProcess.dll` to the `Plugins` folder (located at `NSIS 2` root directory).
+
+#### NSIS 2 (Unicode)
+
+- Copy `nsProcess\Include\nsProcess.nsh` to the `Include` folder (located at `NSIS 2` root directory).
+- Copy `nsProcess\Plugins\x86-unicode\nsProcess.dll` to the `Plugins` folder (located at `NSIS 2` root directory).
