Add Romanian translator to the authors list

--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -13,6 +13,7 @@ Greek – Wasilis Mandratzis-Walz, Manos Santos
 Hungarian – Fodor Kristóf
 Italian – Luca Fioravanti
 Portuguese (Brazil) – Valnei Júnior
+Romanian – Levente Bandi
 Russian – Alexander Gorishnyak
 Spanish – Cristhian Garcia
 Turkish – Çağdaş Tatar
