Add "APK does not run properly" FAQ section

--- a/deploy/general/faq.txt
+++ b/deploy/general/faq.txt
@@ -6,7 +6,12 @@
 ---------------
 
 [Q] "APK Icon Editor" cannot pack/unpack some APK files.
-[A] Try switching between "ZIP" and "Apktool" modes. Also, do not use source/destination directories containing Unicode characters. If your user name also consists of non-Latin characters, choose a custom temporary directory ("Settings" -> "Repacking").
+[A] Try switching between "ZIP" and "Apktool" modes. Do not use source/destination directories containing Unicode characters. If your user name also consists of non-Latin characters, choose a custom temporary directory ("Settings" -> "Repacking").
+
+---------------
+
+[Q] The repacked APK is installed successfully, but does not run properly.
+[A] Probably there is an internal algorithm which protects the APK from changing its structure.
 
 ---------------
 
