Update authors list

--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -28,12 +28,14 @@ Julien Veuillet (www.wakdev.com)
 Benjamin Hahn
 Harshtag
 Spyridon Moschopoulos
+Rebecca McFarland
 Marco Santiago
 Adan Ramirez
 Halton Powell
 Lon Panissidi
 Marcos Barbosa
 Siegfried Engelbrecht
+Orrin Duncan
 Niket Kanchan
 Sheng-Yang Huang
 
@@ -50,3 +52,4 @@ Peter Pursiainen
 Igor Petrunnikov
 Code War
 Apollo_IV
+Mr K
