--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -39,6 +39,8 @@ Siegfried Engelbrecht
 Orrin Duncan
 Niket Kanchan
 Sheng-Yang Huang
+Ford Nicholas
+Andreas Mamesa
 
 Special Thanks:
 Sergey Tachenov – QuaZIP
