--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -31,6 +31,7 @@ Spyridon Moschopoulos
 Rebecca McFarland
 Adam Domanski
 Stefania Lavinia Szabo
+Nico Mak
 Marco Santiago
 Adan Ramirez
 Halton Powell
