--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -38,6 +38,8 @@ Ivan Sudarev
 Abel Bejan
 Loubna Fathani
 Philio Publishing
+Endrit Endrithoxha
+Christine Mbella
 Marco Santiago
 Adan Ramirez
 Halton Powell
@@ -62,7 +64,10 @@ Charles Rhyddian
 Juan Perla
 Bobby Liem
 Darcy Clark
+Mihaela Stemate
+Emilio Vargas Tordecilla
 Andreas Mamesa
+Manuel Lopez
 
 Special Thanks:
 Sergey Tachenov – QuaZIP
