--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -28,6 +28,7 @@ Julien Veuillet (www.wakdev.com)
 Khalida Begum
 Benjamin Hahn
 Evolanguage
+Berend Jan Dunnewold
 Harshtag
 Spyridon Moschopoulos
 Rebecca McFarland
@@ -40,6 +41,7 @@ Loubna Fathani
 Philio Publishing
 Endrit Endrithoxha
 Christine Mbella
+Nelson Silva Fernandes
 Marco Santiago
 Adan Ramirez
 Halton Powell
@@ -65,6 +67,8 @@ Juan Perla
 Bobby Liem
 Darcy Clark
 Mihaela Stemate
+Ventas Online
+Russell Gaither
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
