--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -69,6 +69,7 @@ Darcy Clark
 Mihaela Stemate
 Ventas Online
 Russell Gaither
+Paola Zucchi
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
@@ -82,6 +83,7 @@ Testers:
 Vladimir Gorishnyak
 nhanqv
 Roder van Arkel
+Ibuprophen
 Peter Pursiainen
 Igor Petrunnikov
 Code War
