Update version to 2.0.0

--- a/setup/linux/deb/debian/changelog
+++ b/setup/linux/deb/debian/changelog
@@ -1,3 +1,17 @@
+apk-icon-editor (2.0.0-1) unstable; urgency=low
+
+  * Brand-new APK parsing algorithm.
+  * Majorly improved resource handling.
+  * Majorly improved Android 8 Oreo support.
+  * Added ability to add icons.
+  * Added ability to remove icons.
+  * Upgraded Apktool to v2.3.3.
+  * Dropped usage of ZIP mode.
+  * Dropped usage of aapt.
+  * Lots of internal refactoring.
+
+ -- Alexander Gorishnyak <kefir500@gmail.com>  Mon, 10 May 2018 15:38:07 +0600
+
 apk-icon-editor (1.8.0) unstable; urgency=low
 
   * Added Android 8 Oreo support.
