--- a/setup/linux/deb/debian/changelog
+++ b/setup/linux/deb/debian/changelog
@@ -5,9 +5,11 @@ apk-icon-editor (2.0.0-1) unstable; urgency=low
   * Majorly improved Android 8 Oreo support.
   * Added ability to add icons.
   * Added ability to remove icons.
+  * Added ability to change API levels.
   * Upgraded Apktool to v2.3.3.
   * Dropped usage of ZIP mode.
   * Dropped usage of aapt.
+  * Major GUI improvements.
   * Lots of internal refactoring.
 
  -- Alexander Gorishnyak <kefir500@gmail.com>  Mon, 10 May 2018 15:38:07 +0600
