--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -73,9 +73,11 @@ Russell Gaither
 Paola Zucchi
 Universalip.tv
 Brian Kerr
+Lydia Sovar Kihalić
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
+MeP Host
 
 Special Thanks:
 Andre Somers – SimpleCrypt
