--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -77,6 +77,7 @@ Universalip.tv
 Brian Kerr
 Lydia Sovar Kihalić
 Marcio Roberto de Almeida Souza
+Online Unlimited, LLC
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
