--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -31,6 +31,7 @@ Evolanguage
 Berend Jan Dunnewold
 Adam Domanski
 Juegos Destrem
+Martina Laska
 Harshtag
 Spyridon Moschopoulos
 Rebecca McFarland
@@ -56,6 +57,9 @@ Simone Osnaghi
 Airran McKeown
 Hernando Durana
 Rolf Califice
+Kathleen Cross
+Panwei Fu
+Samantha Lopez Rodriguez
 Niket Kanchan
 Sheng-Yang Huang
 Nicholas Ford
@@ -82,6 +86,11 @@ Lydia Sovar Kihalić
 Marcio Roberto de Almeida Souza
 Online Unlimited, LLC
 Aleksandar Petrov
+Mario Riquelme
+Adolfo Silerio
+Eric Romero
+DT
+Joshua Bingham
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
@@ -89,6 +98,7 @@ Tiago Canastra
 Denis Parakhin
 MeP Host
 Uhuru TV
+Gabriel Calderon
 
 Special Thanks:
 Andre Somers – SimpleCrypt
