--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -94,6 +94,9 @@ DT
 Joshua Bingham
 Marcelo Ferreira
 Michael Allen
+Juan Suarez
+LF Hill Merchandising Service
+Katarzyna Kluk
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
