--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -97,6 +97,7 @@ Michael Allen
 Juan Suarez
 LF Hill Merchandising Service
 Katarzyna Kluk
+Steffen Weiß
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
