--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -32,6 +32,7 @@ Berend Jan Dunnewold
 Adam Domanski
 Juegos Destrem
 Martina Laska
+Luiz A. Nascimento
 Harshtag
 Spyridon Moschopoulos
 Rebecca McFarland
@@ -101,6 +102,9 @@ Steffen Weiß
 Teagan Norrey
 Flavio Engracia Rodriguez
 Ray Ward
+Ruben Egea Belmonte
+Joel Acosta
+Arijit Das
 Emilio Vargas Tordecilla
 Andreas Mamesa
 Manuel Lopez
