Update Italian translation

--- a/deploy/general/authors.txt
+++ b/deploy/general/authors.txt
@@ -11,7 +11,7 @@ French – Stold, AzRock
 German – Sebastian Herrmann, Wasilis Mandratzis-Walz
 Greek – Wasilis Mandratzis-Walz, Manos Santos, Tsiantakis
 Hungarian – Fodor Kristóf
-Italian – Luca Fioravanti
+Italian – Luca Fioravanti, RoKi
 Portuguese (Brazil) – Valnei Júnior
 Romanian – Levente Bandi
 Russian – Alexander Gorishnyak
